Adding authentication and protection for POST, PUT and DELETE methods in all collections.
