# config/passport.js
@@ -1,0 +1,43 @@
+const GoogleStrategy = require('passport-google-oauth20').Strategy;
+const mongoose = require('mongoose');
+const User = require('../models/User');
+
+module.exports = function(passport){
+    passport.use(new GoogleStrategy({
+        clientID: process.env.GOOGLE_CLIENT_ID,
+        clientSecret: process.env.GOOGLE_CLIENT_SECRET,
+        callbackURL: '/google/callback'
+    },
+    async (accessToken, refreshToken, profile, done) => {
+        const newUser = {
+            googleId: profile.id,
+            displayName: profile.displayName,
+            firstName: profile.name.givenName,
+            lastName: profile.name.familyName,
+            image: profile.photos[0].value
+        };
+
+        try {
+            let user = await User.findOne({googleId: profile.id});
+            if (user){
+                done(null, user);
+            } else {
+                user = User.create(newUser);
+                done(null, user);
+            }
+        } catch (err) {
+            console.log(err);
+        }
+    }));
+
+    passport.serializeUser(async (user, done) => {
+        console.log(`Data: ${user}`);
+        await done(null, user._id);
+    });
+
+    passport.deserializeUser(async (id, done)=>{
+        await User.findById(id)
+        .then((user) => done(null, user))
+        .catch((err) => console.log(err));
+    });
+}
